fix(article-page): resolve grid collapse, update aside animation, and add pseudo element with shadow for mobile

--- a/src/app/[slug]/page.module.sass
+++ b/src/app/[slug]/page.module.sass
@@ -2,70 +2,92 @@
 @use '../styles/_breakpoints' as *
 
 .maincontainer
-    height: 100svh
-
-.main_article
-    overflow: hidden
-    height: 100%
-    display: grid
-    grid-template-columns: 1fr
-    position: relative
-    max-width: 1920px
-    margin-inline: auto
-    @include break(lg)
-        position: static
-        grid-template-columns: 1fr 0fr 3fr
-    
-    aside
+    height: calc(100svh - $padding-insetContainer)
+    .article_container
         height: 100%
-        padding: $padding-insetContainer
-        display: flex
-        flex-direction: column
-        box-shadow: 6px -6px 18px gray
-        position: absolute
-        z-index: 2
-        background-color: $primary
-        transform: translateY(84%)
-        transition: transform 0.5s ease-in-out
-        &:has(input:checked)
-            transform: translateY(50px)
-        
-        @include break(lg)
-            position: static
-            justify-content: space-between
-            box-shadow: none
-            overflow: auto
-            transform: translateY(0)
-            box-shadow: unset
-            background-color: transparent
-            padding: 0 $padding-insetContainer
-            
-        input
-            width: 50px
-            height: 50px
-            display: block
+        padding: 0
+        position: relative
+        &::after
+            content: ""
+            width: 100%
+            height: 100%
             position: absolute
-            left: 50%
-            transform: translateX(-50%)
-            top: -25px
+            inset: 0
+            box-shadow: $container-inset
             z-index: 2
-            appearance: none
-            outline: none
-            cursor: pointer
-            &:checked + .arrowUp
-                transform: translateX(-50%) rotate(180deg)
-                transform-origin: center
+            border-radius: $radius-main
+            pointer-events: none
             @include break(lg)
-                display: none!important
+                box-shadow: none
+        @include break(lg)
+            padding: $padding-insetContainer
+
+        .main_article
+            overflow: hidden
+            height: 100%
+            display: grid
+            grid-template-columns: 1fr
+            grid-template-rows: 0
+            position: relative
+            max-width: 1920px
+            margin-inline: auto
+            margin-top: $padding-insetContainer
+            @include break(lg)
+                position: static
+                grid-template-columns: 1fr 0fr 3fr
+                grid-template-rows: 1fr
+                margin-top: 0
             
-        .arrowUp
-            display: block
-            position: absolute
-            left: 50%
-            transform: translateX(-50%) rotate(0deg)
-            top: -25px
-            transition: transform 0.5s ease-in-out
-            @include break(lg)
-                display: none
+            aside
+                height: 100%
+                padding: $padding-insetContainer
+                display: flex
+                flex-direction: column
+                box-shadow: 6px -6px 18px gray
+                position: absolute
+                z-index: 2
+                background-color: $primary
+                transform: translateY(84%)
+                transition: transform 0.5s ease-in-out
+                &:has(input:checked)
+                    transform: translateY(35%)
+                
+                @include break(lg)
+                    position: static
+                    justify-content: space-between
+                    box-shadow: none
+                    overflow: auto
+                    transform: translateY(0)
+                    box-shadow: unset
+                    background-color: transparent
+                    padding: 0 $padding-insetContainer
+                    
+                input
+                    width: 50px
+                    height: 50px
+                    display: block
+                    position: absolute
+                    left: 50%
+                    transform: translateX(-50%)
+                    top: -25px
+                    z-index: 2
+                    appearance: none
+                    outline: none
+                    cursor: pointer
+                    &:checked + .arrowUp
+                        transform: translateX(-50%) rotate(180deg)
+                        transform-origin: center
+                    @include break(lg)
+                        display: none!important
+                    
+                .arrowUp
+                    display: block
+                    position: absolute
+                    left: 50%
+                    transform: translateX(-50%) rotate(0deg)
+                    top: -25px
+                    transition: transform 0.5s ease-in-out
+                    @include break(lg)
+                        display: none
 
 
